--- a/install/Brewfile
+++ b/install/Brewfile
@@ -2,12 +2,12 @@ tap "homebrew/bundle"
 tap "lotyp/homebrew-formulae"
 
 # core/dotfiles
+brew "asdf"
 brew "bats-core"
 brew "coreutils"
 brew "duti"
 brew "lotyp/formulae/dockutil"
 brew "mackup"
-brew "nano"
 brew "stow"
 brew "thefuck"
 brew "topgrade"
@@ -22,30 +22,33 @@ brew "unar"
 brew "wget"
 brew "zoxide"
 
-# search/grep/diff
+# misc
 brew "diff-so-fancy"
 brew "difftastic"
 brew "fd"
-brew "fzf"
-brew "gnu-sed"
-brew "grep"
-brew "jq"
-brew "psgrep"
-brew "the_silver_searcher"
-
-# languages/tools
-brew "gh"
-brew "n"
-brew "python"
-brew "ruby"
-brew "rust"
-brew "shellcheck"
-
-# media
 brew "ffmpeg"
+brew "fzf"
+brew "gawk"
+brew "gnu-sed"
+brew "gpg"
+brew "graphviz"
+brew "grep"
+brew "grip"
 brew "imagemagick"
+brew "jq"
+brew "mackup"
+brew "neovim"
+brew "overmind"
+brew "peco"
+brew "psgrep"
+brew "shellcheck"
+brew "ssh-copy-id"
+brew "stow"
+brew "the_silver_searcher"
+brew "thefuck"
+brew "tmux"
+brew "tree"
+brew "unar"
 brew "uni"
 brew "webp"
-
-# misc
-brew "grip"
+brew "wget"
