--- a/system/.env.macos
+++ b/system/.env.macos
@@ -1,4 +1,8 @@
 export VISUAL_GIT="stree"
+export DOTFILES_IDE="nvim"
+export DOTFILES_GIT_GUI="stree"
+
+export EDITOR='nvim'
 
 # Some app locations
 
